# iti0002-2024

./: .gitignore  README.md  pyproject.toml
EX/ex01/: hello.py
EX/ex02/: codestyle.py  variables.py
EX/ex03/: math_basics.py  math_calculations.py  math_exercises.py
EX/ex04/: hello_function.py  inside_the_function.py  print_table.py  return_table.py
EX/ex05/: calculate_area_of_a_rhombus.py  calculate_perimeter_of_a_circle.py  my_name_is.py  sum_of_numbers.py  sum_six.py  usd_to_eur.py
EX/ex06/: are_equal.py  are_last_letters_same.py  are_strings_same_length.py  ask_name_and_greet.py  hundred.py  is_letter_in_word.py  is_letter_or_digit.py  positive_negative_or_zero.py
EX/ex07/: capitalize_first_letter.py  capitalize_letters.py  get_first_n_symbols.py  join_strings.py  longer_string_first.py  modify_string.py  slice_of_string.py  string_basic.py
EX/ex08/: calculate_compound_interest.py  contains_digit.py  find_digit_sum.py  hola_string.py  multiplication_of_numbers_in_range.py  remove_vowels_from_string.py  sum_of_even_numbers_in_range.py  sum_of_multiples_in_range.py  sum_of_numbers_in_range.py
EX/ex09/: add_element_to_position.py  create_list_of_elements.py  create_list_with_edge_elements.py  create_new_list_from_edge_elements.py  create_new_list_with_added_number.py  create_repeated_list.py  exam.py  get_middle_element_of_list.py  reverse_list.py  swap_edge_elements.py
EX/ex10/: asking_age_from_user.py  asking_age_from_user_validate.py  generate_string_with_random_length.py  (+1 more)
OP/: constructor.py  drawing.py  encapsulation.py  oop_simple.py
(+28 files in other folders)
